--- a/DockerFile
+++ b/DockerFile
@@ -1,31 +1,50 @@
-FROM python:3.9-slim
+
+# FROM ubuntu:bionic
+FROM python:3.10
 
 RUN apt-get update && apt-get install -y \
-    wget \
-    curl \
-    unzip \
-    ca-certificates \
-    libx11-dev \
-    libx11-xcb-dev \
-    libgl1-mesa-glx \
-    libxss1 \
-    libgdk-pixbuf2.0-0 \
-    libnss3 \
-    libgbm-dev \
-    libasound2
+    # python3 python3-pip \
+    fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 \
+    libnspr4 libnss3 lsb-release xdg-utils libxss1 libdbus-glib-1-2 \
+    curl unzip wget vim \
+    xvfb libgbm1 libu2f-udev libvulkan1
 
-RUN curl -sSL https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb -o google-chrome.deb && \
-    dpkg -i google-chrome.deb && \
-    apt-get -f install -y && \
-    rm google-chrome.deb
+RUN CHROMEDRIVER_VERSION=`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE` && \
+    wget https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip && \
+    unzip chromedriver_linux64.zip -d /usr/bin && \
+    chmod +x /usr/bin/chromedriver && \
+    rm chromedriver_linux64.zip
 
-RUN pip install chromedriver-binary-auto
+RUN CHROME_SETUP=google-chrome.deb && \
+    wget -O $CHROME_SETUP "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb" && \
+    dpkg -i $CHROME_SETUP && \
+    # apt install $CHROME_SETUP && \
+    apt-get install -y -f && \
+    rm $CHROME_SETUP
 
-COPY requirements.txt .
-RUN pip install -r requirements.txt
+ENV LANG C.UTF-8
+ENV LC_ALL C.UTF-8
+ENV PYTHONUNBUFFERED=1
+ENV PATH="$PATH:/bin:/usr/bin"
+
+# RUN pip3 install pyvirtualdisplay
+# RUN pip3 install Selenium-Screenshot
+WORKDIR /app
+
+# COPY requirements.txt /app
 
 COPY . /app
 
-WORKDIR /app
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip3 install -r requirements.txt
 
-CMD ["python", "app.py"]
+# ENTRYPOINT ["python3"]
+CMD ["python3", "app.py"]
+
+# ENV APP_HOME /usr/src/app
+# WORKDIR /$APP_HOME
+
+# COPY . $APP_HOME/
+
+# CMD tail -f /dev/null
+# CMD python3 app.py
