--- a/DockerFile
+++ b/DockerFile
@@ -1,50 +1,41 @@
-
-# FROM ubuntu:bionic
 FROM python:3.10
 
+# Install dependencies
 RUN apt-get update && apt-get install -y \
-    # python3 python3-pip \
     fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 \
     libnspr4 libnss3 lsb-release xdg-utils libxss1 libdbus-glib-1-2 \
     curl unzip wget vim \
     xvfb libgbm1 libu2f-udev libvulkan1
 
+# Install ChromeDriver
 RUN CHROMEDRIVER_VERSION=`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE` && \
     wget https://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip && \
     unzip chromedriver_linux64.zip -d /usr/bin && \
     chmod +x /usr/bin/chromedriver && \
     rm chromedriver_linux64.zip
 
+# Install Google Chrome
 RUN CHROME_SETUP=google-chrome.deb && \
     wget -O $CHROME_SETUP "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb" && \
     dpkg -i $CHROME_SETUP && \
-    # apt install $CHROME_SETUP && \
     apt-get install -y -f && \
     rm $CHROME_SETUP
 
+# Set environment variables for Python and Locale
 ENV LANG C.UTF-8
 ENV LC_ALL C.UTF-8
 ENV PYTHONUNBUFFERED=1
 ENV PATH="$PATH:/bin:/usr/bin"
 
-# RUN pip3 install pyvirtualdisplay
-# RUN pip3 install Selenium-Screenshot
+# Set work directory
 WORKDIR /app
 
-# COPY requirements.txt /app
-
+# Copy the application files into the Docker image
 COPY . /app
 
+# Install Python dependencies
 RUN --mount=type=cache,target=/root/.cache/pip \
     pip3 install -r requirements.txt
 
-# ENTRYPOINT ["python3"]
-CMD ["python3", "app.py"]
-
-# ENV APP_HOME /usr/src/app
-# WORKDIR /$APP_HOME
-
-# COPY . $APP_HOME/
-
-# CMD tail -f /dev/null
-# CMD python3 app.py
+# Command to run the application (including starting Xvfb for headless Chrome)
+CMD Xvfb :99 & export DISPLAY=:99 && python3 app.py
