--- a/requirements.txt
+++ b/requirements.txt
@@ -88,6 +88,7 @@ wcwidth==0.2.13
 webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.1.3
+webdriver-manager == 4.0.2
 widgetsnbextension==4.0.13
 wsproto==1.2.0
 yarg==0.1.9
